added meta tags

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
+    <!-- open graph -->
+    <meta name='og:title' content="Prashanth's Profile" >
+    <meta name='og:url' content='https://impk.herokuapp.com'>
+    <meta name="og:description" content="Prashanth Kumar Makes awesome website website and this is his personal site">
+    <meta name="og:image" content="https://impk.herokuapp.com/assets/images/avatar.jpg">
+    <!-- META TAGS -->
+    
+    <meta name="description" content="Prashanth Kumar Makes awesome website website and this is his personal site">
+        <!-- all the crap  -->
+    <meta name="keywords" content="HTML, CSS, JavaScript,web developer,web,india,indian,prashanth,kumar,prashanth kumar,full stack,web site,doraemon,php,sql,prashanth kumar 0,github">
+
+
+
     <!-- STYLES -->
 
     <!-- <link rel="stylesheet" href="assets/font awesome/css/fontawesome.min.css">
