added meta tags

--- a/index.html
+++ b/index.html
@@ -2,19 +2,25 @@
 <html lang="en">
 
 <head>
+    <!-- META TAGS -->
     <meta name="theme-color" content='#121212'>
     <meta name="manifest" content="manifest.json">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <!-- twitter -->
+    <meta name="twitter:title" content="Prashanth's Profile">
+    <meta name="twitter:description" content="Prashanth Kumar Makes awesome website website and this is his personal site">
+    <meta name="twitter:image" content="https://impk.herokuapp.com/assets/images/avatar.jpg">
+    <meta name="twitter:card" content="Prashanth Kumar">
+    <meta name="twitter:image:alt" content="image of prashanth">
 
     <!-- open graph -->
     <meta name='og:title' content="Prashanth's Profile" >
     <meta name='og:url' content='https://impk.herokuapp.com'>
     <meta name="og:description" content="Prashanth Kumar Makes awesome website website and this is his personal site">
     <meta name="og:image" content="https://impk.herokuapp.com/assets/images/avatar.jpg">
-    <!-- META TAGS -->
-    
+    <meta property="og:site_name" content="Prashanth Kumar's Profile">
+
     <meta name="description" content="Prashanth Kumar Makes awesome website website and this is his personal site">
         <!-- all the crap  -->
     <meta name="keywords" content="HTML, CSS, JavaScript,web developer,web,india,indian,prashanth,kumar,prashanth kumar,full stack,web site,doraemon,php,sql,prashanth kumar 0,github">
