--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- twitter -->
     <meta name="twitter:title" content="Prashanth's Profile">
-    <meta name="twitter:description" content="I make Stunning Websites in a very cheap budget">
+    <meta name="twitter:description" content="I make Stunning Websites in a very affordable budget">
     <meta name="twitter:image" content="https://impk.herokuapp.com/assets/images/avatar.jpg">
     <meta name="twitter:card" content="Prashanth Kumar">
     <meta name="twitter:image:alt" content="image of prashanth">
@@ -17,11 +17,11 @@
     <!-- open graph -->
     <meta name='og:title' content="Prashanth's Profile" >
     <meta name='og:url' content='https://impk.herokuapp.com'>
-    <meta name="og:description" content="I make Stunning Websites in a very cheap budget">
+    <meta name="og:description" content="I make Stunning Websites in a very affordable budget">
     <meta name="og:image" content="https://impk.herokuapp.com/assets/images/avatar.jpg">
     <meta property="og:site_name" content="Prashanth Kumar's Profile">
 
-    <meta name="description" content="I make Stunning Websites in a very cheap budget">
+    <meta name="description" content="I make Stunning Websites in a very affordable budget">
         <!-- all the crap  -->
     <meta name="keywords" content="HTML, CSS, JavaScript,web developer,web,india,indian,prashanth,kumar,prashanth kumar,full stack,web site,doraemon,php,sql,prashanth kumar 0,github">
 
