--- a/index.html
+++ b/index.html
@@ -150,9 +150,13 @@
             <h1 class="headding-stylish">My Skills</h1>
 
             
-            <div class="card">
+            <!--div class="card">
                 I can built any kind of website on demand with stunning ui and amazing functionality within a very
                 low budget .
+            </div-->
+
+            <div class="card">
+                I like to make websites and little games for fun :)
             </div>
 
 
