some lil changes

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                     
                 </p>
                 
-                <a href="https://holidayjollyday.000webhostapp.com" class='link'> See It Live <i class="bi-hand-index-thumb-fill "></i> </a>
+                <a href="https://holiday-jollyday.herokuapp.com" class='link'> See It Live <i class="bi-hand-index-thumb-fill "></i> </a>
 
                 <div class="flex-wrap img-showcase">
                     <img src="./assets/images/projects/holiday jollyday/Screen Shot (1).png" alt="holiday jollyday site main page">
