--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <div class="profile flex-v">
                 <div class="avatar">
-                    <img src="https://avatars.githubusercontent.com/u/31966594?v=4" alt="" srcset="">
+                    <img src="./assets/images/me.jpg" alt="" srcset="">
                 </div>
 
                 <div id="typeWriter">
