--- a/index.html
+++ b/index.html
@@ -377,9 +377,9 @@
             <div class="social">
                 <a href="https://wa.me/+918667856746?text=Hi%20Prashanth" class="bi-whatsapp"
                     style='color:rgb(0, 255, 64)'></a>
-                <a href="https://youtube.com/channel/UCatVOA4rVil_6X8pjntUSPA" class="bi-youtube"
+                <a href="https://youtube.com/@prashanthKumar0" class="bi-youtube"
                     style='color:rgb(255, 67, 67)'></a>
-                <a href="https://twitter.com/pk_coder" class="bi-twitter" style='color:rgb(67, 133, 255)'></a>
+                <!-- <a href="https://twitter.com/pk_coder" class="bi-twitter" style='color:rgb(67, 133, 255)'></a> -->
                 <a href="mailto:prashanthgiri786@gmail.com" class="bi-envelope-fill" style='color:rgb(255, 36, 36)'></a>
                 <a href="https://github.com/PrashanthKumar0" class="bi-github"></a>
                 <a href='tel:+918667856746' class="bi-telephone-forward-fill" style='color:rgb(43, 189, 226)'></a>
